feat: add basic entities and seeder
